fix: profile info overflow on all screens

--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -23,7 +23,7 @@
     }
 }*/
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 400px) {
     .profile__edit-button {
         max-width: 18px;
         height: 18px;
