--- a/blocks/profile/__occupation/profile__occupation.css
+++ b/blocks/profile/__occupation/profile__occupation.css
@@ -23,7 +23,7 @@
     }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 400px) {
     .profile__occupation {
         font-size: 14px;
         line-height: 1.2;
